add @utils alias

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,7 +11,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
+      "@utils/*": ["src/utils/*"]
     },
 
     /* Bundler mode */
