--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@base-ui-components/react": "^1.0.0-beta.4",
     "@tailwindcss/vite": "^4.1.16",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
