--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,7 +12,8 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@assets/*": ["src/assets/*"],
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],
+      "@contexts/*": ["src/contexts/*"]
     },
 
     /* Bundler mode */
