--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "devDependencies": {
     "@eslint/css": "^0.14.1",
     "@eslint/js": "^9.39.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
@@ -40,6 +43,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^16.5.0",
+    "happy-dom": "^20.0.11",
     "prettier": "3.7.1",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "~5.9.3",
