--- a/.github/workflows/merge-pull-request.yml
+++ b/.github/workflows/merge-pull-request.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+          cache: "yarn"
 
       - name: Install dependencies
         run: yarn --frozen-lockfile
