run linter, formatter and tests

--- a/.github/workflows/merge-pull-request.yml
+++ b/.github/workflows/merge-pull-request.yml
@@ -19,5 +19,11 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
 
-      - name: Check linting
+      - name: Run linter
         run: yarn lint
+
+      - name: Run formatter check
+        run: yarn format:check
+
+      - name: Run tests
+        run: yarn tests
