--- a/.github/workflows/merge-pull-request.yml
+++ b/.github/workflows/merge-pull-request.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Run formatter check
         run: yarn format:check
 
+      - name: Run type checks
+        run: yarn typecheck
+
       - name: Run tests
         run: yarn test
